--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -7,8 +7,7 @@ where = top
 
 [spacer]
 # height of space in cm (optional)
-height = 0.5
-
+height = 0.2
 
 [log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR]
 file = log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR.h5
@@ -292,6 +291,10 @@ show_data_range = true
 file_type = bigwig
 
 
+[spacer]
+# height of space in cm (optional)
+height = 0.1
+
 [met1_3_ATACseq_Rep1_SRR12362042_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/met1_3_ATACseq_Rep1_SRR12362042_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
 # title of track (plotted on the right side)
@@ -305,7 +308,7 @@ color = #ff00ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 1.0
+max_value = 0.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -340,7 +343,7 @@ color = #e600e6
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 1.0
+max_value = 0.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -376,7 +379,7 @@ color = #00ff00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 1.0
+max_value = 0.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -411,7 +414,7 @@ color = #00e600
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 1.0
+max_value = 0.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -446,7 +449,7 @@ color = #00cc00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 1.0
+max_value = 0.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -481,7 +484,7 @@ color = #00b300
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 1.0
+max_value = 0.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -503,6 +506,10 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
+
+[spacer]
+# height of space in cm (optional)
+height = 0.1
 
 [met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CpG]
 file = /home/ajt200/analysis/BSseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_BSseq_T2T_Col/coverage/bw/met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CpG.bw
@@ -645,6 +652,10 @@ show_data_range = true
 file_type = bigwig
  
 
+[spacer]
+# height of space in cm (optional)
+height = 0.1
+
 [met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHG]
 file = /home/ajt200/analysis/BSseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_BSseq_T2T_Col/coverage/bw/met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHG.bw
 # title of track (plotted on the right side)
@@ -786,6 +797,10 @@ show_data_range = true
 file_type = bigwig
  
 
+[spacer]
+# height of space in cm (optional)
+height = 0.1
+
 [met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHH]
 file = /home/ajt200/analysis/BSseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_BSseq_T2T_Col/coverage/bw/met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHH.bw
 # title of track (plotted on the right side)
@@ -926,6 +941,10 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
  
+
+[spacer]
+# height of space in cm (optional)
+height = 0.1
 
 [met1_3_HiC_HindIII_SRR1504825_T2T_Col_20000_norm_range_KR_PCA1.bw]
 file = met1_3_HiC_HindIII_SRR1504825_T2T_Col_20000_norm_range_KR_PCA1.bw
@@ -1073,6 +1092,10 @@ show_data_range = true
 file_type = bigwig
 
 
+[spacer]
+# height of space in cm (optional)
+height = 0.1
+
 [log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb]
 file = /home/ajt200/analysis/CENH3_seedlings_Maheshwari_Comai_2017_GenomeRes/snakemake_ChIPseq_T2T_Col/mapped/both/log2ChIPcontrol/log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb.bw
 # title of track (plotted on the right side)
@@ -1108,6 +1131,11 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
+
+[spacer]
+# height of space in cm (optional)
+height = 0.1
+
 [log2_WT_H3K9me2_Rep1_ChIP_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb]
 file = /home/ajt200/analysis/170101_Chris_H3K9me2_ChIP/WT/snakemake_ChIPseq_T2T_Col/mapped/both/log2ChIPcontrol/log2_WT_H3K9me2_Rep1_ChIP_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb.bw 
 # title of track (plotted on the right side)
@@ -1122,6 +1150,116 @@ color = #1e90ff
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = auto
 max_value = auto
+# The number of bins takes the region to be plotted and divides it
+# into the number of bins specified
+# Then, at each bin the bigwig mean value is computed and plotted.
+# A lower number of bins produces a coarser tracks
+number_of_bins = 700
+# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+nans_to_zeros = true
+# The possible summary methods are given by pyBigWig:
+# mean/average/stdev/dev/max/min/cov/coverage/sum
+# default is mean
+summary_method = mean
+# for type, the options are: line, points, fill. Default is fill
+# to add the preferred line width or point size use:
+# type = line:lw where lw (linewidth) is float
+# similarly points:ms sets the point size (markersize (ms) to the given float
+# type = line:0.5
+# type = points:0.5
+# set show_data_range to false to hide the text on the left showing the data range
+show_data_range = true
+file_type = bigwig
+
+
+[spacer]
+# height of space in cm (optional)
+height = 0.1
+
+[/home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K150_E4/T2T_Col.genmap]
+file = /home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K150_E4/T2T_Col.genmap.bw
+# title of track (plotted on the right side)
+title = Mappability (k=150)
+# height of track in cm (ignored if the track is overlay on top the previous track)
+height = 2
+color = #a6a6a6
+# To use transparency, you can use alpha
+# default is 1
+# alpha = 0.5
+# the default for min_value and max_value is 'auto' which means that the scale will go
+# roughly from the minimum value found in the region plotted to the maximum value found.
+min_value = 0.0
+max_value = 1.1
+# The number of bins takes the region to be plotted and divides it
+# into the number of bins specified
+# Then, at each bin the bigwig mean value is computed and plotted.
+# A lower number of bins produces a coarser tracks
+number_of_bins = 700
+# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+nans_to_zeros = true
+# The possible summary methods are given by pyBigWig:
+# mean/average/stdev/dev/max/min/cov/coverage/sum
+# default is mean
+summary_method = mean
+# for type, the options are: line, points, fill. Default is fill
+# to add the preferred line width or point size use:
+# type = line:lw where lw (linewidth) is float
+# similarly points:ms sets the point size (markersize (ms) to the given float
+# type = line:0.5
+# type = points:0.5
+# set show_data_range to false to hide the text on the left showing the data range
+show_data_range = true
+file_type = bigwig
+
+[/home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K200_E4/T2T_Col.genmap]
+file = /home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K200_E4/T2T_Col.genmap.bw
+# title of track (plotted on the right side)
+title = Mappability (k=200)
+# height of track in cm (ignored if the track is overlay on top the previous track)
+height = 2
+color = #9a9a9a
+# To use transparency, you can use alpha
+# default is 1
+# alpha = 0.5
+# the default for min_value and max_value is 'auto' which means that the scale will go
+# roughly from the minimum value found in the region plotted to the maximum value found.
+min_value = 0.0
+max_value = 1.1
+# The number of bins takes the region to be plotted and divides it
+# into the number of bins specified
+# Then, at each bin the bigwig mean value is computed and plotted.
+# A lower number of bins produces a coarser tracks
+number_of_bins = 700
+# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+nans_to_zeros = true
+# The possible summary methods are given by pyBigWig:
+# mean/average/stdev/dev/max/min/cov/coverage/sum
+# default is mean
+summary_method = mean
+# for type, the options are: line, points, fill. Default is fill
+# to add the preferred line width or point size use:
+# type = line:lw where lw (linewidth) is float
+# similarly points:ms sets the point size (markersize (ms) to the given float
+# type = line:0.5
+# type = points:0.5
+# set show_data_range to false to hide the text on the left showing the data range
+show_data_range = true
+file_type = bigwig
+
+[/home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K300_E4/T2T_Col.genmap]
+file = /home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K300_E4/T2T_Col.genmap.bw
+# title of track (plotted on the right side)
+title = Mappability (k=300)
+# height of track in cm (ignored if the track is overlay on top the previous track)
+height = 2
+color = #8d8d8d
+# To use transparency, you can use alpha
+# default is 1
+# alpha = 0.5
+# the default for min_value and max_value is 'auto' which means that the scale will go
+# roughly from the minimum value found in the region plotted to the maximum value found.
+min_value = 0.0
+max_value = 1.1
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
