--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -56,7 +56,7 @@ color = none
 overlay_previous = share-y    
 
 [CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5]
-file = /home/ajt200/analysis/repeats/CEN180_in_T2T_Col/CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily.bed
+file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/CENAthila/CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily.bed
 
 # title of track (plotted on the right side)
 title = CEN ATHILA
@@ -959,7 +959,7 @@ color = #ff00ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 15.0
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -994,7 +994,7 @@ color = #00ff00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 15.0
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1034,7 +1034,7 @@ color = #ff00ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 0.60
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1069,7 +1069,7 @@ color = #00ff00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 0.60
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1109,7 +1109,7 @@ color = #ff00ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 0.10
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1144,7 +1144,7 @@ color = #00ff00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 0.10
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1184,7 +1184,7 @@ color = #ff00ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 0.10
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1219,7 +1219,7 @@ color = #00ff00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 0.10
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1259,7 +1259,7 @@ color = #ff00ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 1.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1294,7 +1294,7 @@ color = #e600e6
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 1.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1329,7 +1329,7 @@ color = #cc00cc
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 1.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1364,7 +1364,7 @@ color = #00ff00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 1.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1399,7 +1399,7 @@ color = #00e600
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 1.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -1434,7 +1434,7 @@ color = #00cc00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = auto
+max_value = 1.50
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
