--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -46,7 +46,7 @@ show_masked_bins = false
 file_type = hic_matrix
 
 [tads]
-file = log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_1000_5000_10000_20000_50000_norm_range_KR_threshold0.05_merged_domains.bed
+file = log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_1000_5000_10000_20000_50000_100000_norm_range_KR_threshold0.05_merged_domains.bed
 file_type = domains
 border_color = white
 color = none
@@ -55,9 +55,82 @@ color = none
 # between the Hi-C matrix and the TADs.
 overlay_previous = share-y    
 
+
+[spacer]
+# height of space in cm (optional)
+height = 0.20
+
+[tad separation score]
+file = log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_threshold0.05_tad_score.bm
+file_type = bedgraph_matrix
+title = TAD-separation score
+height = 2
+#type = lines
+#show_data_range = true
+
+
+[spacer]
+# height of space in cm (optional)
+height = 0.20
+
+[log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb]
+file = /home/ajt200/analysis/CENH3_seedlings_Maheshwari_Comai_2017_GenomeRes/snakemake_ChIPseq_T2T_Col/mapped/both/log2ChIPcontrol/log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb.bw
+# title of track (plotted on the right side)
+title = Col-0 CENH3
+# height of track in cm (ignored if the track is overlay on top the previous track)
+height = 2
+color = #ff7f00
+# To use transparency, you can use alpha
+# default is 1
+# alpha = 0.5
+# the default for min_value and max_value is 'auto' which means that the scale will go
+# roughly from the minimum value found in the region plotted to the maximum value found.
+min_value = auto
+max_value = auto
+# The number of bins takes the region to be plotted and divides it
+# into the number of bins specified
+# Then, at each bin the bigwig mean value is computed and plotted.
+# A lower number of bins produces a coarser tracks
+number_of_bins = 700
+# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+nans_to_zeros = true
+# The possible summary methods are given by pyBigWig:
+# mean/average/stdev/dev/max/min/cov/coverage/sum
+# default is mean
+summary_method = mean
+# for type, the options are: line, points, fill. Default is fill
+# to add the preferred line width or point size use:
+# type = line:lw where lw (linewidth) is float
+# similarly points:ms sets the point size (markersize (ms) to the given float
+# type = line:0.5
+# type = points:0.5
+# set show_data_range to false to hide the text on the left showing the data range
+show_data_range = true
+file_type = bigwig
+
+
+
+[spacer]
+# height of space in cm (optional)
+height = 0.20
+
+[CEN180_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5]
+file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/CEN180/CEN180_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5.bed
+title = CEN180
+height = 2
+color = #ff6200
+labels = false
+fontsize = 10
+file_type = bed
+border_color = None
+
+
+[spacer]
+# height of space in cm (optional)
+height = 0.20
+
 [CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5]
 file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/CENAthila/CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily.bed
-
 # title of track (plotted on the right side)
 title = CEN ATHILA
 # height of track in cm (ignored if the track is overlay on top the previous track)
@@ -103,7 +176,7 @@ fontsize = 10
 # `interleaved`: The bed regions are plotted in two lines, first up, then down, then up etc.
 # optional, default is black. To remove the border, simply set 'border_color' to none
 # Not used in tssarrow style
-#border_color = black
+border_color = None
 # style to plot the genes when the display is not triangles
 #style = UCSC
 #style = flybase
@@ -144,7 +217,11 @@ fontsize = 10
 # arrowhead_included = true
 # optional. If not given is guessed from the file ending.
 file_type = bed
-    
+
+
+[spacer]
+# height of space in cm (optional)
+height = 0.20
 
 [met1_RNAseq_Rep1_MappedOn_T2T_Col_both_sort_norm]
 file = /home/ajt200/analysis/160601_Kyuha_RNAseq/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/met1_RNAseq_Rep1_MappedOn_T2T_Col_both_sort_norm.bw
@@ -293,7 +370,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_ATACseq_Rep1_SRR12362042_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/met1_3_ATACseq_Rep1_SRR12362042_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
@@ -308,7 +385,7 @@ color = #ff00ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 0.50
+max_value = 0.80
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -343,7 +420,7 @@ color = #e600e6
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 0.50
+max_value = 0.80
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -379,7 +456,7 @@ color = #00ff00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 0.50
+max_value = 0.80
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -414,7 +491,7 @@ color = #00e600
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 0.50
+max_value = 0.80
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -449,7 +526,7 @@ color = #00cc00
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 0.50
+max_value = 0.80
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -484,7 +561,7 @@ color = #00b300
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
-max_value = 0.50
+max_value = 0.80
 # The number of bins takes the region to be plotted and divides it
 # into the number of bins specified
 # Then, at each bin the bigwig mean value is computed and plotted.
@@ -509,7 +586,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CpG]
 file = /home/ajt200/analysis/BSseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_BSseq_T2T_Col/coverage/bw/met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CpG.bw
@@ -654,7 +731,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHG]
 file = /home/ajt200/analysis/BSseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_BSseq_T2T_Col/coverage/bw/met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHG.bw
@@ -799,7 +876,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHH]
 file = /home/ajt200/analysis/BSseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_BSseq_T2T_Col/coverage/bw/met1_3_BSseq_Rep1_ERR965676_MappedOn_T2T_Col_dedup_CHH.bw
@@ -944,7 +1021,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_6_H3K9me2_ChIP_SRR8180350_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/H3K9me2_seedling_Choi_Zilberman_2020_MolCell/snakemake_ChIPseq_T2T_Col/mapped/both/bw/met1_6_H3K9me2_ChIP_SRR8180350_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
@@ -1019,7 +1096,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_sRNA_ERR966149_MappedOn_T2T_Col_both_21nt_sort_TPM]
 file = /home/ajt200/analysis/sRNAseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_sRNAseq_T2T_Col/mapped/both/bw/met1_3_sRNA_ERR966149_MappedOn_T2T_Col_both_21nt_sort_TPM.bw
@@ -1094,7 +1171,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_sRNA_ERR966149_MappedOn_T2T_Col_both_22nt_sort_TPM]
 file = /home/ajt200/analysis/sRNAseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_sRNAseq_T2T_Col/mapped/both/bw/met1_3_sRNA_ERR966149_MappedOn_T2T_Col_both_22nt_sort_TPM.bw
@@ -1169,7 +1246,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_sRNA_ERR966149_MappedOn_T2T_Col_both_24nt_sort_TPM]
 file = /home/ajt200/analysis/sRNAseq_leaf_Rigal_Mathieu_2016_PNAS/snakemake_sRNAseq_T2T_Col/mapped/both/bw/met1_3_sRNA_ERR966149_MappedOn_T2T_Col_both_24nt_sort_TPM.bw
@@ -1244,7 +1321,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_SPO11oligos_Rep1_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/160518_Kyuha_SPO11oligos/met1/snakemake_SPO11oligos_T2T_Col/mapped/both/bw/met1_SPO11oligos_Rep1_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
@@ -1459,7 +1536,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [met1_3_HiC_HindIII_SRR1504825_T2T_Col_20000_norm_range_KR_PCA1.bw]
 file = met1_3_HiC_HindIII_SRR1504825_T2T_Col_20000_norm_range_KR_PCA1.bw
@@ -1607,49 +1684,9 @@ show_data_range = true
 file_type = bigwig
 
 
-[spacer]
-# height of space in cm (optional)
-height = 0.1
-
-[log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb]
-file = /home/ajt200/analysis/CENH3_seedlings_Maheshwari_Comai_2017_GenomeRes/snakemake_ChIPseq_T2T_Col/mapped/both/log2ChIPcontrol/log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb.bw
-# title of track (plotted on the right side)
-title = Col-0 CENH3
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #ff7f00
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = auto
-max_value = auto
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# for type, the options are: line, points, fill. Default is fill
-# to add the preferred line width or point size use:
-# type = line:lw where lw (linewidth) is float
-# similarly points:ms sets the point size (markersize (ms) to the given float
-# type = line:0.5
-# type = points:0.5
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
-
-
 #[spacer]
 ## height of space in cm (optional)
-#height = 0.1
+#height = 0.20
 #
 #[log2_WT_H3K9me2_Rep1_ChIP_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb]
 #file = /home/ajt200/analysis/170101_Chris_H3K9me2_ChIP/WT/snakemake_ChIPseq_T2T_Col/mapped/both/log2ChIPcontrol/log2_WT_H3K9me2_Rep1_ChIP_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb.bw 
@@ -1689,7 +1726,7 @@ file_type = bigwig
 
 [spacer]
 # height of space in cm (optional)
-height = 0.1
+height = 0.20
 
 [/home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K50_E2/T2T_Col.genmap]
 file = /home/ajt200/analysis/nanopore/T2T_Col/genmap_mappability/map_K50_E2/T2T_Col.genmap.bw
