--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -11,14 +11,14 @@ height = 0.2
 
 [log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR]
 file = log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR.h5
-title = Log2(ddm1/Col-0) Hi-C KR counts
+title = Log2(ddm1/WT) Hi-C KR counts
 # The different options for color maps can be found here:
 # https://matplotlib.org/users/colormaps.html
 # the default color map is RdYlBu_r (_r) stands for reverse
 # If you want your own colormap you can put the values of the color you want
 # For example, colormap = ['blue', 'yellow', 'red']
 # or colormap = ['white', (1, 0.88, .66), (1, 0.74, 0.25), (1, 0.5, 0), (1, 0.19, 0), (0.74, 0, 0), (0.35, 0, 0)]
-#colormap = RdYlBu_r
+colormap = plasma
 # depth is the maximum distance that should be plotted.
 # If it is more than 125% of the plotted region, it will
 # be adjsted to this maximum value.
@@ -28,8 +28,8 @@ depth = 10000000
 # hic matrix are kept (e.g. the image does not appear shrink or extended)
 # height = 10
 # min_value and max_value refer to the contacts in the matrix.
-#min_value =2.8
-#max_value = 3.0
+min_value = -0.7
+max_value = 0.7
 # the matrix can be transformed using the log1p (or log or -log, but zeros could be problematic)
 #transform = log1p
 # show masked bins plots as white lines
@@ -48,7 +48,7 @@ file_type = hic_matrix
 [tads]
 file = log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_threshold0.05_domains.bed
 file_type = domains
-border_color = white
+border_color = black
 color = none
 # the tads are overlay over the hic-matrix
 # the share-y options sets the y-axis to be shared
@@ -76,7 +76,7 @@ height = 0.20
 [log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb]
 file = /home/ajt200/analysis/CENH3_seedlings_Maheshwari_Comai_2017_GenomeRes/snakemake_ChIPseq_T2T_Col/mapped/both/log2ChIPcontrol/log2_WT_CENH3_Rep1_ChIP_SRR4430537_WT_REC8_Myc_Rep1_input_MappedOn_T2T_Col_lowXM_both_sort_norm_binSize1kb.bw
 # title of track (plotted on the right side)
-title = Col-0 CENH3
+title = WT CENH3
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #ff7f00
@@ -305,7 +305,7 @@ file_type = bigwig
 [Col_0_RNAseq_Rep1_SRR11780903_MappedOn_T2T_Col_both_sort_norm]
 file = /home/ajt200/analysis/RNAseq_leaf_Osakabe_Berger_2021_NCB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/Col_0_RNAseq_Rep1_SRR11780903_MappedOn_T2T_Col_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 RNA-seq Rep1
+title = WT RNA-seq Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -331,7 +331,7 @@ file_type = bigwig
 [Col_0_RNAseq_Rep2_SRR11780904_MappedOn_T2T_Col_both_sort_norm]
 file = /home/ajt200/analysis/RNAseq_leaf_Osakabe_Berger_2021_NCB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/Col_0_RNAseq_Rep2_SRR11780904_MappedOn_T2T_Col_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 RNA-seq Rep2
+title = WT RNA-seq Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00e600
@@ -357,7 +357,7 @@ file_type = bigwig
 [Col_0_RNAseq_Rep3_SRR11780905_MappedOn_T2T_Col_both_sort_norm]
 file = /home/ajt200/analysis/RNAseq_leaf_Osakabe_Berger_2021_NCB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/Col_0_RNAseq_Rep3_SRR11780905_MappedOn_T2T_Col_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 RNA-seq Rep3
+title = WT RNA-seq Rep3
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00cc00
@@ -459,7 +459,7 @@ file_type = bigwig
 [Col_0_ATACseq_Rep1_SRR12362020_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep1_SRR12362020_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 ATAC-seq Rep1
+title = WT ATAC-seq Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -494,7 +494,7 @@ file_type = bigwig
 [Col_0_ATACseq_Rep2_SRR12362021_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep2_SRR12362021_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 ATAC-seq Rep2
+title = WT ATAC-seq Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00e600
@@ -529,7 +529,7 @@ file_type = bigwig
 [Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 ATAC-seq Rep3
+title = WT ATAC-seq Rep3
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00cc00
@@ -564,7 +564,7 @@ file_type = bigwig
 [Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 ATAC-seq Rep4
+title = WT ATAC-seq Rep4
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00b300
@@ -639,7 +639,7 @@ file_type = bigwig
 [WT_BSseq_Rep2_2013_MappedOn_T2T_Col_dedup_CpG]
 file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snakemake_BSseq_T2T_Col/coverage/bw/WT_BSseq_Rep2_2013_MappedOn_T2T_Col_dedup_CpG.bw
 # title of track (plotted on the right side)
-title = Col-0 mCpG BS-seq
+title = WT mCpG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -708,7 +708,7 @@ file_type = bigwig
 [WT_BSseq_Rep2_2013_MappedOn_T2T_Col_dedup_CHG]
 file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snakemake_BSseq_T2T_Col/coverage/bw/WT_BSseq_Rep2_2013_MappedOn_T2T_Col_dedup_CHG.bw
 # title of track (plotted on the right side)
-title = Col-0 mCHG BS-seq
+title = WT mCHG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -777,7 +777,7 @@ file_type = bigwig
 [WT_BSseq_Rep2_2013_MappedOn_T2T_Col_dedup_CHH]
 file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snakemake_BSseq_T2T_Col/coverage/bw/WT_BSseq_Rep2_2013_MappedOn_T2T_Col_dedup_CHH.bw
 # title of track (plotted on the right side)
-title = Col-0 mCHH BS-seq
+title = WT mCHH BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -869,7 +869,7 @@ file_type = bigwig
 [Col_0_H3K9me2_Rep1_ChIP_SRR11780913_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/H3K9me2_leaf_Osakabe_Berger_2021_NCB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep1_ChIP_SRR11780913_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 H3K9me2 Rep1
+title = WT H3K9me2 Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -898,7 +898,7 @@ file_type = bigwig
 [Col_0_H3K9me2_Rep2_ChIP_SRR11780923_MappedOn_T2T_Col_lowXM_both_sort_norm]
 file = /home/ajt200/analysis/H3K9me2_leaf_Osakabe_Berger_2021_NCB/snakemake_ChIPseq_T2T_Col/mapped/both/bw/Col_0_H3K9me2_Rep2_ChIP_SRR11780923_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
 # title of track (plotted on the right side)
-title = Col-0 H3K9me2 Rep2
+title = WT H3K9me2 Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00e600
@@ -961,7 +961,7 @@ file_type = bigwig
 [Col_0_sRNA_SRR1042171_MappedOn_T2T_Col_both_21nt_sort_TPM]
 file = /home/ajt200/analysis/sRNAseq_floral_Creasey_Martienssen_2014_Nature/snakemake_sRNAseq_T2T_Col/mapped/both/bw/Col_0_sRNA_SRR1042171_MappedOn_T2T_Col_both_21nt_sort_TPM.bw
 # title of track (plotted on the right side)
-title = Col-0 21-nt sRNA
+title = WT 21-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -1024,7 +1024,7 @@ file_type = bigwig
 [Col_0_sRNA_SRR1042171_MappedOn_T2T_Col_both_22nt_sort_TPM]
 file = /home/ajt200/analysis/sRNAseq_floral_Creasey_Martienssen_2014_Nature/snakemake_sRNAseq_T2T_Col/mapped/both/bw/Col_0_sRNA_SRR1042171_MappedOn_T2T_Col_both_22nt_sort_TPM.bw
 # title of track (plotted on the right side)
-title = Col-0 22-nt sRNA
+title = WT 22-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -1087,7 +1087,7 @@ file_type = bigwig
 [Col_0_sRNA_SRR1042171_MappedOn_T2T_Col_both_24nt_sort_TPM]
 file = /home/ajt200/analysis/sRNAseq_floral_Creasey_Martienssen_2014_Nature/snakemake_sRNAseq_T2T_Col/mapped/both/bw/Col_0_sRNA_SRR1042171_MappedOn_T2T_Col_both_24nt_sort_TPM.bw
 # title of track (plotted on the right side)
-title = Col-0 24-nt sRNA
+title = WT 24-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
@@ -1147,7 +1147,7 @@ file_type = bigwig
 [Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_PCA1.bw]
 file = Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_PCA1.bw
 # title of track (plotted on the right side)
-title = Col-0 Hi-C PC1
+title = WT Hi-C PC1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
 color = #00ff00
