--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_kss_HiC_HindIII_SRR1504827_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_kss_HiC_HindIII_SRR1504827_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -228,7 +228,7 @@ file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNA
 title = kss RNA-seq Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
@@ -254,7 +254,7 @@ file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNA
 title = kss RNA-seq Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #0099cc
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
@@ -338,7 +338,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = kss mCpG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -407,7 +407,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = kss mCHG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -476,7 +476,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = kss mCHH BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -545,7 +545,7 @@ file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_Ch
 title = kss H3K9me2 Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -574,7 +574,7 @@ file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_Ch
 title = kss H3K9me2 Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #0099cc
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -666,7 +666,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Stroud_Jacobsen_2014_NSMB/snakemake_
 title = kss 21-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -729,7 +729,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Stroud_Jacobsen_2014_NSMB/snakemake_
 title = kss 22-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -792,7 +792,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Stroud_Jacobsen_2014_NSMB/snakemake_
 title = kss 24-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -855,7 +855,7 @@ file = kss_HiC_HindIII_SRR1504827_T2T_Col_20000_norm_range_KR_PCA1.bw
 title = kss Hi-C PC1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #00bfff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = -0.05
