--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_ddm1_2_HiC_HindIII_SRR1504824_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -229,7 +229,7 @@ file = /home/ajt200/analysis/RNAseq_leaf_Osakabe_Berger_2021_NCB/snakemake_RNAse
 title = ddm1 RNA-seq Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
@@ -248,14 +248,14 @@ summary_method = mean
 # set show_data_range to false to hide the text on the left showing the data range
 show_data_range = true
 file_type = bigwig
- 
+
 [ddm1_RNAseq_Rep2_SRR11780907_MappedOn_T2T_Col_both_sort_norm]
 file = /home/ajt200/analysis/RNAseq_leaf_Osakabe_Berger_2021_NCB/snakemake_RNAseq_STAR_T2T_Col/mapped/both/bw/ddm1_RNAseq_Rep2_SRR11780907_MappedOn_T2T_Col_both_sort_norm.bw
 # title of track (plotted on the right side)
 title = ddm1 RNA-seq Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #8932d9
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
@@ -281,7 +281,7 @@ file = /home/ajt200/analysis/RNAseq_leaf_Osakabe_Berger_2021_NCB/snakemake_RNAse
 title = ddm1 RNA-seq Rep3
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #cc00cc
+color = #6f22b6
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
@@ -391,7 +391,7 @@ file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_A
 title = ddm1 ATAC-seq Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -426,7 +426,7 @@ file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_A
 title = ddm1 ATAC-seq Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #8932d9
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -526,75 +526,75 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT ATAC-seq Rep3
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00cc00
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 0.80
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# for type, the options are: line, points, fill. Default is fill
-# to add the preferred line width or point size use:
-# type = line:lw where lw (linewidth) is float
-# similarly points:ms sets the point size (markersize (ms) to the given float
-# type = line:0.5
-# type = points:0.5
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
-
-[Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT ATAC-seq Rep4
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00b300
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 0.80
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# for type, the options are: line, points, fill. Default is fill
-# to add the preferred line width or point size use:
-# type = line:lw where lw (linewidth) is float
-# similarly points:ms sets the point size (markersize (ms) to the given float
-# type = line:0.5
-# type = points:0.5
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT ATAC-seq Rep3
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00cc00
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 0.80
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## for type, the options are: line, points, fill. Default is fill
+## to add the preferred line width or point size use:
+## type = line:lw where lw (linewidth) is float
+## similarly points:ms sets the point size (markersize (ms) to the given float
+## type = line:0.5
+## type = points:0.5
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
+#
+#[Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT ATAC-seq Rep4
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00b300
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 0.80
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## for type, the options are: line, points, fill. Default is fill
+## to add the preferred line width or point size use:
+## type = line:lw where lw (linewidth) is float
+## similarly points:ms sets the point size (markersize (ms) to the given float
+## type = line:0.5
+## type = points:0.5
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [spacer]
@@ -607,7 +607,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = ddm1 mCpG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -676,7 +676,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = ddm1 mCHG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -745,7 +745,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = ddm1 mCHH BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -814,7 +814,7 @@ file = /home/ajt200/analysis/H3K9me2_leaf_Osakabe_Berger_2021_NCB/snakemake_ChIP
 title = ddm1 H3K9me2 Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -843,7 +843,7 @@ file = /home/ajt200/analysis/H3K9me2_leaf_Osakabe_Berger_2021_NCB/snakemake_ChIP
 title = ddm1 H3K9me2 Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #8932d9
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -935,7 +935,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Creasey_Martienssen_2014_Nature/snak
 title = ddm1 21-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -998,7 +998,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Creasey_Martienssen_2014_Nature/snak
 title = ddm1 22-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -1061,7 +1061,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Creasey_Martienssen_2014_Nature/snak
 title = ddm1 24-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -1124,7 +1124,7 @@ file = ddm1_2_HiC_HindIII_SRR1504824_T2T_Col_20000_norm_range_KR_PCA1.bw
 title = ddm1 Hi-C PC1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #a25de1
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = -0.05
