--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -229,7 +229,7 @@ file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNA
 title = ddcc RNA-seq Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
@@ -255,7 +255,7 @@ file = /home/ajt200/analysis/RNAseq_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_RNA
 title = ddcc RNA-seq Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #0000ff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = 0
@@ -339,7 +339,7 @@ file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_A
 title = ddcc ATAC-seq Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -374,7 +374,7 @@ file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_A
 title = ddcc ATAC-seq Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #0000ff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -474,75 +474,75 @@ summary_method = mean
 show_data_range = true
 file_type = bigwig
 
-[Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT ATAC-seq Rep3
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00cc00
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 0.80
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# for type, the options are: line, points, fill. Default is fill
-# to add the preferred line width or point size use:
-# type = line:lw where lw (linewidth) is float
-# similarly points:ms sets the point size (markersize (ms) to the given float
-# type = line:0.5
-# type = points:0.5
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
-
-[Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm]
-file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
-# title of track (plotted on the right side)
-title = WT ATAC-seq Rep4
-# height of track in cm (ignored if the track is overlay on top the previous track)
-height = 2
-color = #00b300
-# To use transparency, you can use alpha
-# default is 1
-# alpha = 0.5
-# the default for min_value and max_value is 'auto' which means that the scale will go
-# roughly from the minimum value found in the region plotted to the maximum value found.
-min_value = 0
-max_value = 0.80
-# The number of bins takes the region to be plotted and divides it
-# into the number of bins specified
-# Then, at each bin the bigwig mean value is computed and plotted.
-# A lower number of bins produces a coarser tracks
-number_of_bins = 700
-# to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
-nans_to_zeros = true
-# The possible summary methods are given by pyBigWig:
-# mean/average/stdev/dev/max/min/cov/coverage/sum
-# default is mean
-summary_method = mean
-# for type, the options are: line, points, fill. Default is fill
-# to add the preferred line width or point size use:
-# type = line:lw where lw (linewidth) is float
-# similarly points:ms sets the point size (markersize (ms) to the given float
-# type = line:0.5
-# type = points:0.5
-# set show_data_range to false to hide the text on the left showing the data range
-show_data_range = true
-file_type = bigwig
+#[Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep3_SRR12362022_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT ATAC-seq Rep3
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00cc00
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 0.80
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## for type, the options are: line, points, fill. Default is fill
+## to add the preferred line width or point size use:
+## type = line:lw where lw (linewidth) is float
+## similarly points:ms sets the point size (markersize (ms) to the given float
+## type = line:0.5
+## type = points:0.5
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
+#
+#[Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm]
+#file = /home/ajt200/analysis/ATACseq_floral_Zhong_Jacobsen_2021_PNAS/snakemake_ATACseq_T2T_Col/mapped/both/bw/Col_0_ATACseq_Rep4_SRR12362023_MappedOn_T2T_Col_lowXM_both_sort_norm.bw
+## title of track (plotted on the right side)
+#title = WT ATAC-seq Rep4
+## height of track in cm (ignored if the track is overlay on top the previous track)
+#height = 2
+#color = #00b300
+## To use transparency, you can use alpha
+## default is 1
+## alpha = 0.5
+## the default for min_value and max_value is 'auto' which means that the scale will go
+## roughly from the minimum value found in the region plotted to the maximum value found.
+#min_value = 0
+#max_value = 0.80
+## The number of bins takes the region to be plotted and divides it
+## into the number of bins specified
+## Then, at each bin the bigwig mean value is computed and plotted.
+## A lower number of bins produces a coarser tracks
+#number_of_bins = 700
+## to convert missing data (NaNs) into zeros. Otherwise, missing data is not plotted.
+#nans_to_zeros = true
+## The possible summary methods are given by pyBigWig:
+## mean/average/stdev/dev/max/min/cov/coverage/sum
+## default is mean
+#summary_method = mean
+## for type, the options are: line, points, fill. Default is fill
+## to add the preferred line width or point size use:
+## type = line:lw where lw (linewidth) is float
+## similarly points:ms sets the point size (markersize (ms) to the given float
+## type = line:0.5
+## type = points:0.5
+## set show_data_range to false to hide the text on the left showing the data range
+#show_data_range = true
+#file_type = bigwig
 
 
 [spacer]
@@ -555,7 +555,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = ddcc mCpG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -624,7 +624,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = ddcc mCHG BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -693,7 +693,7 @@ file = /home/ajt200/analysis/BSseq_leaf_Stroud_Jacobsen_2013_Cell_2014_NSMB/snak
 title = ddcc mCHH BS-seq
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -762,7 +762,7 @@ file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_Ch
 title = ddcc H3K9me2 Rep1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -791,7 +791,7 @@ file = /home/ajt200/analysis/H3K9me2_leaf_Stroud_Jacobsen_2014_NSMB/snakemake_Ch
 title = ddcc H3K9me2 Rep2
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #e600e6
+color = #0000ff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -883,7 +883,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Stroud_Jacobsen_2014_NSMB/snakemake_
 title = ddcc 21-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -946,7 +946,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Stroud_Jacobsen_2014_NSMB/snakemake_
 title = ddcc 22-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -1009,7 +1009,7 @@ file = /home/ajt200/analysis/sRNAseq_floral_Stroud_Jacobsen_2014_NSMB/snakemake_
 title = ddcc 24-nt sRNA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # To use transparency, you can use alpha
 # default is 1
 # alpha = 0.5
@@ -1072,7 +1072,7 @@ file = drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_T2T_Col_20000_norm_range_KR_P
 title = ddcc Hi-C PC1
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 2
-color = #ff00ff
+color = #4d4dff
 # the default for min_value and max_value is 'auto' which means that the scale will go
 # roughly from the minimum value found in the region plotted to the maximum value found.
 min_value = -0.05
