--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_KR_hic_tracks.ini
@@ -65,6 +65,8 @@ file = log2ratio_drm1_drm2_cmt2_cmt3_HiC_HindIII_SRR12362059_Col_0_HiC_HindIII_S
 file_type = bedgraph_matrix
 title = TAD-separation score
 height = 2
+min_value = -5.0
+max_value = 2.5
 #type = lines
 #show_data_range = true
 
@@ -129,10 +131,10 @@ border_color = None
 # height of space in cm (optional)
 height = 0.20
 
-[CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5]
+[CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily]
 file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/CENAthila/CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily.bed
 # title of track (plotted on the right side)
-title = CEN ATHILA
+title = ATHILA
 # height of track in cm (ignored if the track is overlay on top the previous track)
 height = 1
 # if you want to plot the track upside-down:
@@ -156,7 +158,7 @@ height = 1
 #min_value=0
 #max_value=100
 # If the color is simply a color name, then this color is used and the score is not considered.
-color = #00688B
+color = #008ebe
 # whether printing the labels
 labels = false
 # optional:
@@ -216,6 +218,17 @@ border_color = None
 # the extremity of the interval use:
 # arrowhead_included = true
 # optional. If not given is guessed from the file ending.
+file_type = bed
+
+[nonCENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily]
+file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/nonCENAthila/nonCENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily.bed
+#title = Non-CEN ATHILA
+height = 1
+overlay_previous = yes
+color = #be3000
+labels = false
+fontsize = 10
+border_color = None
 file_type = bed
 
 
