--- a/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_ICE_hic_tracks.ini
+++ b/HiC_T2T_Col/results/hic_results/matrix/Col_0_HiC_HindIII_SRR1504819/raw/20000/log2ratio_met1_3_HiC_HindIII_SRR1504825_Col_0_HiC_HindIII_SRR1504819_T2T_Col_20000_norm_range_ICE_hic_tracks.ini
@@ -56,7 +56,7 @@ file_type = hic_matrix
 ## between the Hi-C matrix and the TADs.
 #overlay_previous = share-y    
 
-[CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5]
+[CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily]
 file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/CENAthila/CENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily.bed
 
 # title of track (plotted on the right side)
@@ -144,6 +144,17 @@ fontsize = 10
 # the extremity of the interval use:
 # arrowhead_included = true
 # optional. If not given is guessed from the file ending.
+file_type = bed
+    
+
+[nonCENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily]
+file = /home/ajt200/analysis/nanopore/T2T_Col/annotation/CENAthila/nonCENAthila_in_T2T_Col_Chr1_Chr2_Chr3_Chr4_Chr5_nofamily.bed
+#title = NonCEN ATHILA
+height = 1
+overlay_previous = yes
+color = #00688B
+labels = false
+fontsize = 10
 file_type = bed
     
 
